js/js.translator/testData/incremental/invalidationWithPL/interfaceBecomeClass/lib1/l1.0.kt
interface Foo {
    fun getSomething() = 0
}
